Made adblocking work with QWebEngineScripts
Also, used a lot of the convenience functions present in the qutebrowser codebase.

Everything seems to work, including scriptlets.

Also added unit test cases for cosmetic filtering.

--- a/misc/requirements/requirements-tests-bleeding.txt
+++ b/misc/requirements/requirements-tests-bleeding.txt
@@ -24,8 +24,8 @@ git+https://github.com/pytest-dev/pytest-xdist.git
 git+https://github.com/john-kurkowski/tldextract
 
 # Problematic: needs rust (and some time to build)
-# git+https://github.com/ArniDagur/python-adblock.git
-adblock
+git+https://github.com/alkim0/python-adblock.git
+# adblock
 
 ## qutebrowser dependencies
 
